adding delete routes
