# src/swagger_documentation.json
@@ -697,6 +697,9 @@
                 },
                 "post": {
                   "example": "any"
+                },
+                "ratings": {
+                  "example": "any"
                 }
               }
             }
@@ -705,6 +708,42 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Reviews"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "reviewId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
           },
           "400": {
             "description": "Bad Request"
@@ -806,6 +845,9 @@
                   "example": "any"
                 },
                 "post": {
+                  "example": "any"
+                },
+                "ratings": {
                   "example": "any"
                 }
               }
